Fix logo position on mobile devices

--- a/_header.scss
+++ b/_header.scss
@@ -24,6 +24,7 @@ header {
     height: auto;
     filter: invert(100%) sepia(0%) saturate(7438%) hue-rotate(164deg) brightness(104%) contrast(112%);
     z-index: 5;
+    margin-left: 20px;
   }
   .navigation-wrapper {
     position: absolute;
@@ -104,11 +105,6 @@ header {
     .brand img {
       width: $desktop-header-height;
       height: auto;
-    }
-  }
-
-  @media (min-width: 1280px) {
-    .brand {
       margin-left: 0;
     }
   }
